# Rustalizer

./: Cargo.toml  LICENSE  README.md
src/: app.rs  equalizer.rs  errors.rs  graph.rs  lib.rs  main.rs  ring_buffer.rs  tui.rs
src/app/: graph.rs
src/equalizer/: dsp.rs
src/equalizer/dsp/: fft.rs  window.rs
