[package]
name = "rustalizer"
version = "0.1.0"
authors = ["Jakub Duchniewicz <j.duchniewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = ""
gio = ""
glib = "0.10"
gtk = "0.9"
cairo-rs = ""
cpal = ""
